--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "lightning-detector-card",
-  "version": "0.0.1",
-  "description": "Lovelace Lightning Detector Card",
+  "name": "boilerplate-card",
+  "version": "1.1.9",
+  "description": "Lovelace boilerplate-card",
   "keywords": [
     "home-assistant",
     "homeassistant",
@@ -10,9 +10,9 @@
     "lovelace",
     "custom-cards"
   ],
-  "module": "lightning-detector-card.js",
-  "repository": "git@github.com:ironsheep/lovelace-lightning-detector-card.git",
-  "author": "Stephen M Moraco <stephen@ironsheep.biz>",
+  "module": "boilerplate-card.js",
+  "repository": "git@github.com:custom_cards/boilerplate-card.git",
+  "author": "Ian Richardson <iantrich@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "custom-card-helpers": "^1.6.3",
@@ -25,9 +25,6 @@
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-proposal-decorators": "^7.4.0",
     "@rollup/plugin-json": "^4.0.0",
-    "@rollup/plugin-commonjs": "^11.0.0",
-    "@rollup/plugin-node-resolve": "^6.0.0",
-    "@rollup/plugin-babel": "^5.0.0",
     "@typescript-eslint/eslint-plugin": "^2.6.0",
     "@typescript-eslint/parser": "^2.6.0",
     "eslint": "^6.6.0",
@@ -37,6 +34,9 @@
     "eslint-plugin-prettier": "^3.1.1",
     "prettier": "^1.19.1",
     "rollup": "^1.26.0",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-serve": "^1.0.1",
     "rollup-plugin-terser": "^5.1.2",
     "rollup-plugin-typescript2": "^0.24.3",
