--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "boilerplate-card",
-  "version": "1.1.9",
-  "description": "Lovelace boilerplate-card",
+  "name": "lightning-detector-card",
+  "version": "1.0.0",
+  "description": "Lovelace Lightning Detector Card",
   "keywords": [
     "home-assistant",
     "homeassistant",
@@ -10,9 +10,9 @@
     "lovelace",
     "custom-cards"
   ],
-  "module": "boilerplate-card.js",
-  "repository": "git@github.com:custom_cards/boilerplate-card.git",
-  "author": "Ian Richardson <iantrich@gmail.com>",
+  "module": "lightning-detector-card.js",
+  "repository": "github.com/ironsheep/lovelace-lightning-detector-card",
+  "author": "Stephen Moraco <stephen@ironsheep.biz>",
   "license": "MIT",
   "dependencies": {
     "custom-card-helpers": "^1.6.3",
