--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,8 @@ jobs:
       # Build
       - name: Build the file
         run: |
+          pwd
+          find . -type f -name 'lightning-detector-card.ts'
           cd /home/runner/work/lightning-detector-card/lightning-detector-card
           npm install
           npm run build
